scripts/_check2.txt
  File "<string>", line 1
    import pandas as pd; df=pd.read_csv(r'C:\Users\xiaomi\AppData\Roaming\MetaQuotes\Terminal\7643C0B96C7AD5841307C9E1EB0B9252\MQL5\Files\bars\XAUUSD_5.csv',header=None,names=['date','time','open','high','low','close','volume']); df['dt']=pd.to_datetime(df['date'].astype(str)+' '+df['time'].astype(str)); df=df.sort_values('dt'); print('Total bars:',len(df)); print('First:',df['dt'].iloc[0],'Last:',df['dt'].iloc[-1]); friday=df[df['dt'].dt.strftime('%%Y%%m%%d')=='20260612']; print('June12 bars:',len(friday)); print('Friday range:',friday['dt'].iloc[0],'->',friday['dt'].iloc[-1]) if len(friday)>0 else print('NO June12 data'); print('All Fridays last 3:'); for d in sorted(df[df['dt'].dt.weekday==4]['dt'].dt.strftime('%%Y%%m%%d').unique())[-3:]: cnt=len(df[df['dt'].dt.strftime('%%Y%%m%%d')==d]); print(f'  {d}: {cnt} bars')
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^^^
SyntaxError: invalid syntax
